fix mobile spacing

--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -184,3 +184,13 @@
     }
   }
 }
+
+@media (max-width: 575px) {
+	#admission-cost-group {
+		padding-top: 1em;
+	}
+
+	#admission-quantity-group {
+		padding-top: 4em;
+	}
+}
